--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.28",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11"
