loading item book

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ts-pro/vue-eternal-loading": "^1.1.1",
+    "@vuelidate/core": "^2.0.0-alpha.30",
+    "@vuelidate/validators": "^2.0.0-alpha.24",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.28",
